infra/charts/gdgkl-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdgkl-frontend
  labels:
    app.kubernetes.io/name: gdgkl-frontend
    quanianitis.com/service-type: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: gdgkl-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gdgkl-frontend
        quanianitis.com/service-type: frontend
    spec:
      containers:
        - name: gdgkl-frontend
          image: ghcr.io/ian-cq/gdgkl-frontend:v0.2.2
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
