infra/charts/gdgkl-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdgkl-frontend
spec:
  selector:
    app.kubernetes.io/name: gdgkl-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
