infra/charts/gdgkl-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gdgkl-frontend-ingress
  namespace: default
  annotations:
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  ingressClassName: cilium
  rules:
  - host: gdgkl.quanianitis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gdgkl-frontend
            port:
              number: 80
